Fix: prevent scroll bars from appearing on elements to catch overflow.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,7 +70,7 @@
 
 @layer base {
   * {
-    @apply overflow-auto border-border;
+    @apply border-border;
   }
   body {
     @apply flex flex-col bg-background text-foreground;
